src/styles/global.css
/* ... */
/* For image that take up full width & height */
.img-all img, video { 
    display: flex;
    border-radius: var(--border-radius-medium);
    border: 1px solid var(--color-border-light);
    overflow: hidden;
}

.bg-ic {
    background-color: #FFF7ED;
}

.bg-cn {
    background-color: var(--color-background-primary);
    background-image: linear-gradient(to bottom, rgba(184,246,254,0.25) 0%,rgba(254,255,220,0.25) 50.52%,rgba(255,191,211,0.25) 100%);
}

.bg-dd {
    background-color: var(--color-background-primary);
    background-image: linear-gradient(223.45deg, rgba(184,47,255,0.25) -6.71%, rgba(167,51,250,0.25) 12.07%, rgba(78,70,223,0.25) 113.23%);
    
}

.bg-rx {
    background-color: #191B1D;
}

.img-right img {
    position: relative;
    right: -2rem;
    bottom: -2rem;
}

.img-bot img {
    position: relative; 
    bottom: -2rem;
}

figure a[href]::after{
    content: "";
    display: block;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}


figure img {
    transition: transform 0.3s ease;
}

figure a:hover img {
    transform: scale(1.02);
}

i {
    color: var(--color-text-secondary);
}

nav a {
    text-decoration: none;
    border-radius: var(--border-radius-small);
    padding: 0.5rem 0.75rem; 
    text-align: center;
    transition: background-color 0.2s ease-in-out;

}

nav a:hover {
    
    background-color: var(--color-background-secondary);
}

#project-list, header, .inko-cat, .creator-now, .datadog, .about {
    padding-left: 10rem;
    padding-right: 10rem;
}

#project-list .project-list-item {
    margin: 0 0 8rem;
}

.proj_description li {
    margin: 0 0 1rem;
}

.proj_description .proj_pos {
    color: var(--color-text-primary);
}

.project_description {
    margin: 0 0 1.25rem;
}

header h3 {
    margin: 0 auto;
    text-align: center;
    width: 70%;
}

/* * {
    border: 1px solid red;
} */

body {
    margin: 0 auto;
    background-color: var(--color-background-primary);
    padding-top: 140px;
}

.svg-container {
    overflow-x: auto;
    scroll-behavior: smooth;
}

#hero-illustration {
    margin: 0 0 2rem;
}

#hero-illustration svg {
    width: 100%;
    margin: 1rem 0;
}


@keyframes spaceship {
    0% {
        transform: translateY(10px);
    }
    50% {
        transform: translateY(-10px);
    }
    100% {
        transform: translateY(10px);
    }
}

#spaceship {
    animation-name: spaceship;
    animation-duration: 3s;
    animation-iteration-count: infinite;
}

@keyframes cube {
    0% {
        transform: translateY(0px);
    }
    50% {
        transform: translateY(-10px);
    }
    100% {
        transform: translateY(0px);
    }
}

#cube {
    animation-name: cube;
    animation-duration: 6s;
    animation-iteration-count: infinite;
}

@keyframes totoro {
    0% {
        transform: translateY(10px);
    }
    50% {
        transform: translateY(-10px);
    }
    100% {
        transform: translateY(10px);
    }
}

#totoro {
    animation-name: totoro;
    animation-duration: 4s;
    animation-iteration-count: infinite;
}



@keyframes walk-side-1 {
    50% {
        transform: translate(-15px, 10px);
    }
}

@keyframes walk-side-2 {
    50% {
        transform: translate(15px, -8px);
    }
}

@keyframes walk-side-3 {
    50% {
        transform: translate(-80px, 40px);
    }
}

@keyframes walk-up {
    50% {
        transform: translateY(-10px);
    }
}

@keyframes walk-down {
    50% {
        transform: translateY(10px);
    }
}

#figure-2 {
    animation-name: walk-side-2;
    animation-duration: 6s;
    animation-iteration-count: infinite;
}

#figure-3 {
    animation-name: walk-down;
    animation-duration: 6s;
    animation-iteration-count: infinite;
}

#figure-4 {
    animation-name: walk-side-3;
    animation-duration: 15s;
    animation-iteration-count: infinite;
}

#figure-5 {
    animation-name: walk-side-2;
    animation-duration: 10s;
    animation-iteration-count: infinite;
}

#figure-8 {
    animation-name: walk-side-1;
    animation-duration: 6s;
    animation-iteration-count: infinite;
}

#figure-6 {
    animation-name: walk-up;
    animation-duration: 4s;
    animation-iteration-count: infinite;
}



svg {
    position: relative;
}

#spaceship, #laptop, #ping-pong, #microphone, #cup, #pencil, #cat, #pencil, #art-palette, #taipei-101, #totoro, #pen-tool {
    position: absolute;
    transition: transform 0.4s ease-out;
    transform-origin: center;
}
  
  #spaceship:hover, #laptop:hover, #ping-pong:hover, #microphone:hover, #cup:hover, #pencil:hover, #cat:hover, #pencil:hover, #art-palette:hover, #taipei-101:hover, #pen-tool:hover {
    transform: translateY(-0.4rem);
  }

#grid-base {
    box-shadow: 0 0 40px 100px white inset;
}

.skip {
    position: absolute;
    left: -10000px;
    top: auto;
    width: 1px;
    height: 1px;
    overflow: hidden;
    background-color: var(--color-background-tertiary);
    padding: 0.25rem 0.75rem;
}

.skip:focus {
    position: absolute;
    left: 40px;
    width: auto;
    height: auto;
}

.logo {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    margin: 0 0 0.5rem;
}

.logo p {
    margin: 0;
}

.logo img {
    border-radius: var(--border-radius-small);
}

.grid {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: auto;
    column-gap: 1.25rem;
    row-gap: 0;
}

.grid figure {
    margin-bottom: 1.25rem;
}

.wide-grid {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: auto;
    gap: 3rem;
    width: 100%;
}

.project-grid {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: auto;
    gap: 0 1.25rem;
}


.sub-header {
    margin-block-start: 3rem;
}
/* ... */

